2008-03-27 Patrick Mansfield <patmans@us.ibm.com>

	* libc/include/reent.h: Define _func_r functions in this file to
	func if REENTRANT_SYSCALLS_PROVIDED and MISSING_SYSCALL_NAMES are
	defined.
			  
2008-03-27  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/unistd.h: Declare lockf(2) and define lockf
	constants when building for Cygwin.

2008-03-11  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/rgetc.c (__srget_r): Invoke CHECK_INIT to ensure
	stdin gets resolved properly before refilling.

2008-03-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/getopt.h: Hide newlib extensions under
	the __need_getopt_newlib flag.
	* libc/stdlib/getopt.c: #define __need_getopt_newlib before including
	getopt.h.  Put entire code under !HAVE_GETOPT to support platforms
	with their own getopt implementation.
	* configure.host: Specify HAVE_GETOPT for x86-linux.

2008-03-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/reent.h(_REENT_SMALL_CHECK_INIT): Specify
	this macro completely instead of referring to CHECK_STD_INIT which
	is only found in libc/stdio/local.h.
	* libc/stdio/dprintf.c: Add include of local.h.
	* libc/stdio/vdprintf.c: Ditto.
	* libc/stdio/vdiprintf.c: Ditto.

2008-03-04  Eric Blake  <ebb9@byu.net>

	Fix strtod("nan()", ptr).
	* libc/stdlib/gdtoa-hexnan.c (hexnan): When the optional
	n-char-sequence is omitted, still parse the ().

2008-03-03  Eric Blake  <ebb9@byu.net>

	Fix ftell bug after ungetc.
	* libc/stdio/ftell.c (_ftell_r): Don't flush ungetc buffer on
	ftell.
	* libc/stdio64/ftello64.c (_ftello64_r): Likewise.
	* libc/stdio/fflush.c (_fflush_r): Clear unget buffer when
	repositioning underlying fd offset.

2008-03-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/getopt.h (no_argument): Added for glibc compatibility.
	(required_argument, optional_argument): Ditto.

2008-02-29  Gregory Pietsch  <gpietsch@comcast.net>

	* libc/stdlib/getopt.c (getopt_internal): Rewrite to accept